pq off-heap